--- a/index2.html
+++ b/index2.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/gh/rafaelspiljak/benefida/dist/assets/index.js"></script>
     <style type="text/tailwindcss">
       @theme {
         --color-clifford: #D7EAD6;
