--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="form-adhd-widget"></div>
+    <script src="https://cdn.jsdelivr.net/gh/rafaelspiljak/benefida/dist/assets/index.js"></script>
 
   </body>
 </html>
