--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="form-adhd-widget"></div>
-    <script src="https://cdn.jsdelivr.net/gh/rafaelspiljak/benefida/dist/assets/index.js"></script>
+    <script src="/Users/rafael/Desktop/cavecode/form-adhd-widget/dist/assets/index.js"></script>
 
   </body>
 </html>
