feat: add form submission

--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,8 @@
   <body>
     <div id="form-adhd-widget"></div>
     <script src="/Users/rafael/Desktop/cavecode/form-adhd-widget/dist/assets/index.js"></script>
-
+    <form id="wf-form-ADHD-portrait">
+      <input type="hidden" name="name" value="John Doe" />
+    </form>
   </body>
 </html>
