--- a/index3.html
+++ b/index3.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="form-adhd-widget"></div>
-    <script src="https://cdn.jsdelivr.net/gh/rafaelspiljak/benefida@c78eb7529efd69902c00529247162d4f1a3ce0e4/dist/assets/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/rafaelspiljak/benefida/dist/assets/index.js"></script>
 
   </body>
 </html>
